# wheat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  wheat.py
notes/: br.wat  compiling.md  demo.wak  demo.wat  match.md  notes.md  pkg.md  script-or-compile.md  struct.md
src/: ast.rs  full.pest  main.rs  parser.rs  reduce.rs  sexpr.pest  sexpr.rs  syntax.pest  types.rs
test/: run.py  wac.wast
test/_output/: address.wast.bin.wast.wast  align.wast.bin.wast.wast.bin.wast.wast  binary-leb128.wast.bin.wast.wast  binary.js  binary.wast.bin.wast.wast.bin.wast.wast  block.wast.bin.wast.wast  br.wast.bin.wast.wast.bin.wast.wast  br_if.wast.bin.wast.wast.bin.wast.wast  br_table.wast.bin.wast.wast  break-drop.wast.bin.wast.wast  call.wast.bin.wast.wast  call_indirect.wast.bin.wast.wast  const.js  const.wast.bin.wast.wast.bin.wast.wast  conversions.wast.bin.wast.wast.bin.wast.wast  custom.wast.bin.wast.wast.bin.wast.wast  data.wast.bin.wast.wast  elem.wast.bin.wast.wast  endianness.wast.bin.wast.wast.bin.wast.wast  exports.wast.bin.wast.wast.bin.wast.wast  f32.wast.bin.wast.wast  f32_bitwise.wast.bin.wast.wast  f32_cmp.wast.bin.wast.wast.bin.wast.wast  f64.wast.bin.wast.wast  f64_bitwise.wast.bin.wast.wast.bin.wast.wast  f64_cmp.wast.bin.wast.wast  fac.wast.bin.wast.wast.bin.wast.wast  float_exprs.wast.bin.wast.wast  float_literals.wast.bin.wast.wast  (+46 more)
test_data/: arbitrary.wht  call_chain.wht  demo.wak  enum.wht  expand2.wht  hello_world.wak  hello_world.wht  hello_world_expanded.wak  hello_world_expanded.wht  invalid_arbitrary.wht  raw_string.wht  struct.wht  value.wht
