[package]
name = "wheat-lang"
version = "0.1.0"
authors = ["Rett Berg <rett@google.com>"]
edition = "2018"

[dependencies]
wast = "11.0.0"
structopt = "0.3.0"
env_logger = "0.7.0"
log = "0.4.0"
pest = "2.0.0"
pest_derive = "2.0.0"
expect_macro = "*"
siphasher = "0.3"

# Error handling:
# https://tarquin-the-brave.github.io/blog/posts/collecting-all-the-errors/
fehler = "1.0"
anyhow = "1.0"
beau_collector = "0.2"
thiserror = "1.0"

